gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: s1-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "fantastic-s1.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s1-vs
spec:
  hosts:
  - "fantastic-s1.com"
  gateways:
  - s1-gateway
  http:
  - route:
    - destination:
        host: s1
