vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s2
spec:
  hosts:
  - s2
  http:
  - match:
    - headers:
        x-user:
          exact: chaeyk
    route:
    - destination:
        host: s2
        subset: v2
  - match:
    - headers:
        x-test:
          exact: delay
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: s2
  - match:
    - headers:
        x-test:
          exact: error
    fault:
      abort:
        httpStatus: 500
        percent: 100
    route:
    - destination:
        host: s2
  - match:
    - headers:
        x-test:
          exact: weight
    route:
    - destination:
        host: s2
        subset: v1
      weight: 80
    - destination:
        host: s2
        subset: v2
      weight: 20
  - match:
    - headers:
        x-test:
          exact: timeout
    route:
    - destination:
        host: s2
        subset: v1
    timeout: 1s
  - route:
    - destination:
        host: s2
#        subset: v1
    timeout: 1s
    retries:
      attempts: 3

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: s2
spec:
  host: s2
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 70
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
spec:
  hosts:
  - google.com
  - www.google.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: google
spec:
  hosts:
  - google.com
  - www.google.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - google.com
    route:
    - destination:
        host: google.com
        port:
          number: 443
  - match:
    - port: 443
      sni_hosts:
      - www.google.com
    route:
    - destination:
        host: www.google.com
        port:
          number: 443
